--- a/notebooks.ipynb
+++ b/notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f673ed8c-2afe-4190-8a0d-47f3bdd818a8",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
     "import pandas as pd\n",
     "\n",
     "# 1. Load UNSW-NB15 CSV\n",
-    "df = pd.read_csv(r\"C:\\Users\\kbc_k\\ids_Project\\train_test_network.csv\")\n",
+    "df = pd.read_csv(r\"c:\\Users\\kbc_k\\ids_Project\\comp3000\\train_test_network.csv\")\n",
     "\n",
     "# 2. Look at first rows\n",
     "print(df.head())\n",
@@ -76,7 +76,7 @@
     "# 5. Check target/label column\n",
     "print(df['label'].value_counts())    # sometimes binary label\n",
     "# or:\n",
-    "# print(df['attack_cat'].value_counts())   # attack category\n"
+    "# label often → 0 = normal, 1 = attack\n"
    ]
   },
   {
