--- a/notebooks.ipynb
+++ b/notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f673ed8c-2afe-4190-8a0d-47f3bdd818a8",
    "metadata": {},
    "outputs": [
@@ -10,50 +10,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          src_ip  src_port         dst_ip  dst_port proto service    duration  \\\n",
-      "0   192.168.1.37      4444  192.168.1.193     49178   tcp       -  290.371539   \n",
-      "1  192.168.1.193     49180   192.168.1.37      8080   tcp       -    0.000102   \n",
-      "2  192.168.1.193     49180   192.168.1.37      8080   tcp       -    0.000148   \n",
-      "3  192.168.1.193     49180   192.168.1.37      8080   tcp       -    0.000113   \n",
-      "4  192.168.1.193     49180   192.168.1.37      8080   tcp       -    0.000130   \n",
+      "   id       dur proto service state  spkts  dpkts  sbytes  dbytes  \\\n",
+      "0   1  0.000011   udp       -   INT      2      0     496       0   \n",
+      "1   2  0.000008   udp       -   INT      2      0    1762       0   \n",
+      "2   3  0.000005   udp       -   INT      2      0    1068       0   \n",
+      "3   4  0.000006   udp       -   INT      2      0     900       0   \n",
+      "4   5  0.000010   udp       -   INT      2      0    2126       0   \n",
       "\n",
-      "   src_bytes  dst_bytes conn_state  ...  http_response_body_len  \\\n",
-      "0     101568       2592        OTH  ...                       0   \n",
-      "1          0          0        REJ  ...                       0   \n",
-      "2          0          0        REJ  ...                       0   \n",
-      "3          0          0        REJ  ...                       0   \n",
-      "4          0          0        REJ  ...                       0   \n",
+      "          rate  ...  ct_dst_sport_ltm  ct_dst_src_ltm  is_ftp_login  \\\n",
+      "0   90909.0902  ...                 1               2             0   \n",
+      "1  125000.0003  ...                 1               2             0   \n",
+      "2  200000.0051  ...                 1               3             0   \n",
+      "3  166666.6608  ...                 1               3             0   \n",
+      "4  100000.0025  ...                 1               3             0   \n",
       "\n",
-      "   http_status_code  http_user_agent  http_orig_mime_types  \\\n",
-      "0                 0                -                     -   \n",
-      "1                 0                -                     -   \n",
-      "2                 0                -                     -   \n",
-      "3                 0                -                     -   \n",
-      "4                 0                -                     -   \n",
+      "   ct_ftp_cmd  ct_flw_http_mthd  ct_src_ltm  ct_srv_dst  is_sm_ips_ports  \\\n",
+      "0           0                 0           1           2                0   \n",
+      "1           0                 0           1           2                0   \n",
+      "2           0                 0           1           3                0   \n",
+      "3           0                 0           2           3                0   \n",
+      "4           0                 0           2           3                0   \n",
       "\n",
-      "   http_resp_mime_types weird_name  weird_addl  weird_notice  label      type  \n",
-      "0                     -          -           -             -      1  backdoor  \n",
-      "1                     -          -           -             -      1  backdoor  \n",
-      "2                     -          -           -             -      1  backdoor  \n",
-      "3                     -          -           -             -      1  backdoor  \n",
-      "4                     -          -           -             -      1  backdoor  \n",
+      "   attack_cat  label  \n",
+      "0      Normal      0  \n",
+      "1      Normal      0  \n",
+      "2      Normal      0  \n",
+      "3      Normal      0  \n",
+      "4      Normal      0  \n",
       "\n",
-      "[5 rows x 44 columns]\n",
-      "Shape: (211043, 44)\n",
-      "Index(['src_ip', 'src_port', 'dst_ip', 'dst_port', 'proto', 'service',\n",
-      "       'duration', 'src_bytes', 'dst_bytes', 'conn_state', 'missed_bytes',\n",
-      "       'src_pkts', 'src_ip_bytes', 'dst_pkts', 'dst_ip_bytes', 'dns_query',\n",
-      "       'dns_qclass', 'dns_qtype', 'dns_rcode', 'dns_AA', 'dns_RD', 'dns_RA',\n",
-      "       'dns_rejected', 'ssl_version', 'ssl_cipher', 'ssl_resumed',\n",
-      "       'ssl_established', 'ssl_subject', 'ssl_issuer', 'http_trans_depth',\n",
-      "       'http_method', 'http_uri', 'http_version', 'http_request_body_len',\n",
-      "       'http_response_body_len', 'http_status_code', 'http_user_agent',\n",
-      "       'http_orig_mime_types', 'http_resp_mime_types', 'weird_name',\n",
-      "       'weird_addl', 'weird_notice', 'label', 'type'],\n",
+      "[5 rows x 45 columns]\n",
+      "Shape: (82332, 45)\n",
+      "Index(['id', 'dur', 'proto', 'service', 'state', 'spkts', 'dpkts', 'sbytes',\n",
+      "       'dbytes', 'rate', 'sttl', 'dttl', 'sload', 'dload', 'sloss', 'dloss',\n",
+      "       'sinpkt', 'dinpkt', 'sjit', 'djit', 'swin', 'stcpb', 'dtcpb', 'dwin',\n",
+      "       'tcprtt', 'synack', 'ackdat', 'smean', 'dmean', 'trans_depth',\n",
+      "       'response_body_len', 'ct_srv_src', 'ct_state_ttl', 'ct_dst_ltm',\n",
+      "       'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm',\n",
+      "       'is_ftp_login', 'ct_ftp_cmd', 'ct_flw_http_mthd', 'ct_src_ltm',\n",
+      "       'ct_srv_dst', 'is_sm_ips_ports', 'attack_cat', 'label'],\n",
       "      dtype='object')\n",
       "label\n",
-      "1    161043\n",
-      "0     50000\n",
+      "1    45332\n",
+      "0    37000\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -62,7 +60,8 @@
     "import pandas as pd\n",
     "\n",
     "# 1. Load UNSW-NB15 CSV\n",
-    "df = pd.read_csv(r\"c:\\Users\\kbc_k\\ids_Project\\comp3000\\train_test_network.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_training-set1.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_testing-set2.csv\")\n",
     "\n",
     "# 2. Look at first rows\n",
     "print(df.head())\n",
@@ -81,8 +80,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "dd82cec9-abe5-423f-8e2e-4642f947ed7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeric: ['id', 'dur', 'spkts', 'dpkts', 'sbytes', 'dbytes', 'rate', 'sttl', 'dttl', 'sload', 'dload', 'sloss', 'dloss', 'sinpkt', 'dinpkt', 'sjit', 'djit', 'swin', 'stcpb', 'dtcpb', 'dwin', 'tcprtt', 'synack', 'ackdat', 'smean', 'dmean', 'trans_depth', 'response_body_len', 'ct_srv_src', 'ct_state_ttl', 'ct_dst_ltm', 'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm', 'is_ftp_login', 'ct_ftp_cmd', 'ct_flw_http_mthd', 'ct_src_ltm', 'ct_srv_dst', 'is_sm_ips_ports']\n",
+      "Categorical: ['proto', 'service', 'state', 'attack_cat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Change 'label' to the actual label column name in CSV\n",
+    "label_col = 'label'  \n",
+    "\n",
+    "# Drop label from features\n",
+    "X = df.drop(columns=[label_col])\n",
+    "y = df[label_col]\n",
+    "\n",
+    "# Check which columns are numeric and which are object (categorical)\n",
+    "numeric_cols = X.select_dtypes(exclude=['object']).columns.tolist()\n",
+    "categorical_cols = X.select_dtypes(include=['object']).columns.tolist()\n",
+    "\n",
+    "print(\"Numeric:\", numeric_cols)\n",
+    "print(\"Categorical:\", categorical_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "985cbd02-2ac6-40b0-b232-b8ca835e6251",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model trained!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "\n",
+    "# Preprocess: encode categorical + scale numeric\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols),\n",
+    "        (\"num\", StandardScaler(), numeric_cols)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Isolation Forest model\n",
+    "iso = IsolationForest(\n",
+    "    n_estimators=200,\n",
+    "    contamination=0.1,  # guess 10% anomalies (you can adjust)\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Full pipeline: preprocessing + model\n",
+    "clf = Pipeline(steps=[\n",
+    "    (\"preprocess\", preprocessor),\n",
+    "    (\"model\", iso)\n",
+    "])\n",
+    "\n",
+    "# Keep only normal rows (assuming 0 = normal)\n",
+    "normal_df = df[df[label_col] == 0]\n",
+    "\n",
+    "X_normal = normal_df.drop(columns=[label_col])\n",
+    "\n",
+    "# Fit the pipeline\n",
+    "clf.fit(X_normal)\n",
+    "print(\"Model trained!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e8ad37f7-ec43-467f-8e6d-e983ec39dcc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[33300  3700]\n",
+      " [23998 21334]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.58      0.90      0.71     37000\n",
+      "           1       0.85      0.47      0.61     45332\n",
+      "\n",
+      "    accuracy                           0.66     82332\n",
+      "   macro avg       0.72      0.69      0.66     82332\n",
+      "weighted avg       0.73      0.66      0.65     82332\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "X_all = df.drop(columns=[label_col])\n",
+    "y_all = df[label_col]  # 0 normal, 1 attack\n",
+    "\n",
+    "# Predict: IsolationForest gives 1 (normal) and -1 (anomaly)\n",
+    "raw_preds = clf.predict(X_all)\n",
+    "\n",
+    "# Convert to 0/1 (same as label)\n",
+    "pred_anomaly = np.where(raw_preds == -1, 1, 0)  # 1 = anomaly/attack\n",
+    "\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_all, pred_anomaly))\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_all, pred_anomaly))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8efb71b-d09b-4784-bb5e-f945e7cf78f4",
    "metadata": {},
    "outputs": [],
    "source": []
