--- a/notebooks.ipynb
+++ b/notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "f673ed8c-2afe-4190-8a0d-47f3bdd818a8",
    "metadata": {},
    "outputs": [
@@ -10,36 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id       dur proto service state  spkts  dpkts  sbytes  dbytes  \\\n",
-      "0   1  0.000011   udp       -   INT      2      0     496       0   \n",
-      "1   2  0.000008   udp       -   INT      2      0    1762       0   \n",
-      "2   3  0.000005   udp       -   INT      2      0    1068       0   \n",
-      "3   4  0.000006   udp       -   INT      2      0     900       0   \n",
-      "4   5  0.000010   udp       -   INT      2      0    2126       0   \n",
+      "Train shape: (175341, 45)\n",
+      "Test shape: (82332, 45)\n",
       "\n",
-      "          rate  ...  ct_dst_sport_ltm  ct_dst_src_ltm  is_ftp_login  \\\n",
-      "0   90909.0902  ...                 1               2             0   \n",
-      "1  125000.0003  ...                 1               2             0   \n",
-      "2  200000.0051  ...                 1               3             0   \n",
-      "3  166666.6608  ...                 1               3             0   \n",
-      "4  100000.0025  ...                 1               3             0   \n",
-      "\n",
-      "   ct_ftp_cmd  ct_flw_http_mthd  ct_src_ltm  ct_srv_dst  is_sm_ips_ports  \\\n",
-      "0           0                 0           1           2                0   \n",
-      "1           0                 0           1           2                0   \n",
-      "2           0                 0           1           3                0   \n",
-      "3           0                 0           2           3                0   \n",
-      "4           0                 0           2           3                0   \n",
-      "\n",
-      "   attack_cat  label  \n",
-      "0      Normal      0  \n",
-      "1      Normal      0  \n",
-      "2      Normal      0  \n",
-      "3      Normal      0  \n",
-      "4      Normal      0  \n",
-      "\n",
-      "[5 rows x 45 columns]\n",
-      "Shape: (82332, 45)\n",
+      "Train columns:\n",
       "Index(['id', 'dur', 'proto', 'service', 'state', 'spkts', 'dpkts', 'sbytes',\n",
       "       'dbytes', 'rate', 'sttl', 'dttl', 'sload', 'dload', 'sloss', 'dloss',\n",
       "       'sinpkt', 'dinpkt', 'sjit', 'djit', 'swin', 'stcpb', 'dtcpb', 'dwin',\n",
@@ -49,9 +23,11 @@
       "       'is_ftp_login', 'ct_ftp_cmd', 'ct_flw_http_mthd', 'ct_src_ltm',\n",
       "       'ct_srv_dst', 'is_sm_ips_ports', 'attack_cat', 'label'],\n",
       "      dtype='object')\n",
+      "\n",
+      "Train label counts:\n",
       "label\n",
-      "1    45332\n",
-      "0    37000\n",
+      "1    119341\n",
+      "0     56000\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -59,28 +35,30 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# 1. Load UNSW-NB15 CSV\n",
-    "df = pd.read_csv(r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_training-set1.csv\")\n",
-    "df = pd.read_csv(r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_testing-set2.csv\")\n",
+    "train_path = r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_training-set1.csv\"\n",
+    "test_path  = r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_testing-set2.csv\"\n",
     "\n",
-    "# 2. Look at first rows\n",
-    "print(df.head())\n",
+    "train_df = pd.read_csv(train_path)\n",
+    "test_df  = pd.read_csv(test_path)\n",
     "\n",
-    "# 3. Check shape\n",
-    "print(\"Shape:\", df.shape)\n",
+    "print(\"Train shape:\", train_df.shape)\n",
+    "print(\"Test shape:\", test_df.shape)\n",
     "\n",
-    "# 4. Check columns\n",
-    "print(df.columns)\n",
+    "print(\"\\nTrain columns:\")\n",
+    "print(train_df.columns)\n",
     "\n",
-    "# 5. Check target/label column\n",
-    "print(df['label'].value_counts())    # sometimes binary label\n",
-    "# or:\n",
-    "# label often → 0 = normal, 1 = attack\n"
+    "# Check label columns (UNSW usually has label + attack_cat)\n",
+    "if \"label\" in train_df.columns:\n",
+    "    print(\"\\nTrain label counts:\")\n",
+    "    print(train_df[\"label\"].value_counts())\n",
+    "else:\n",
+    "    print(\"\\nNo 'label' column found. Check column names above.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "dd82cec9-abe5-423f-8e2e-4642f947ed7b",
    "metadata": {},
    "outputs": [
@@ -88,30 +66,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numeric: ['id', 'dur', 'spkts', 'dpkts', 'sbytes', 'dbytes', 'rate', 'sttl', 'dttl', 'sload', 'dload', 'sloss', 'dloss', 'sinpkt', 'dinpkt', 'sjit', 'djit', 'swin', 'stcpb', 'dtcpb', 'dwin', 'tcprtt', 'synack', 'ackdat', 'smean', 'dmean', 'trans_depth', 'response_body_len', 'ct_srv_src', 'ct_state_ttl', 'ct_dst_ltm', 'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm', 'is_ftp_login', 'ct_ftp_cmd', 'ct_flw_http_mthd', 'ct_src_ltm', 'ct_srv_dst', 'is_sm_ips_ports']\n",
-      "Categorical: ['proto', 'service', 'state', 'attack_cat']\n"
+      " Model trained!\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[31279  5721]\n",
+      " [22290 23042]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.58      0.85      0.69     37000\n",
+      "           1       0.80      0.51      0.62     45332\n",
+      "\n",
+      "    accuracy                           0.66     82332\n",
+      "   macro avg       0.69      0.68      0.66     82332\n",
+      "weighted avg       0.70      0.66      0.65     82332\n",
+      "\n",
+      "\n",
+      " Model saved successfully at:\n",
+      "C:\\Users\\kbc_k\\comp3000\\models\\unsw_isoforest.pkl\n"
      ]
     }
    ],
    "source": [
-    "# Change 'label' to the actual label column name in CSV\n",
-    "label_col = 'label'  \n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import joblib\n",
     "\n",
-    "# Drop label from features\n",
-    "X = df.drop(columns=[label_col])\n",
-    "y = df[label_col]\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "\n",
-    "# Check which columns are numeric and which are object (categorical)\n",
-    "numeric_cols = X.select_dtypes(exclude=['object']).columns.tolist()\n",
-    "categorical_cols = X.select_dtypes(include=['object']).columns.tolist()\n",
+    "# Paths\n",
+    "train_path = r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_training-set1.csv\"\n",
+    "test_path  = r\"C:\\Users\\kbc_k\\comp3000\\UNSW_NB15_testing-set2.csv\"\n",
     "\n",
-    "print(\"Numeric:\", numeric_cols)\n",
-    "print(\"Categorical:\", categorical_cols)"
+    "# Ensure models folder exists\n",
+    "os.makedirs(r\"C:\\Users\\kbc_k\\comp3000\\models\", exist_ok=True)\n",
+    "\n",
+    "# Load data\n",
+    "train_df = pd.read_csv(train_path)\n",
+    "test_df  = pd.read_csv(test_path)\n",
+    "\n",
+    "# Label column\n",
+    "label_col = \"label\"\n",
+    "\n",
+    "# Drop cols not used for features\n",
+    "drop_cols = [label_col, \"attack_cat\", \"id\"]\n",
+    "\n",
+    "X_train = train_df.drop(columns=drop_cols, errors=\"ignore\")\n",
+    "y_train = train_df[label_col]\n",
+    "\n",
+    "X_test = test_df.drop(columns=drop_cols, errors=\"ignore\")\n",
+    "y_test = test_df[label_col]\n",
+    "\n",
+    "# Identify categorical + numeric\n",
+    "categorical_cols = X_train.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "numeric_cols = X_train.select_dtypes(exclude=[\"object\"]).columns.tolist()\n",
+    "\n",
+    "# Preprocessor\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols),\n",
+    "        (\"num\", StandardScaler(), numeric_cols),\n",
+    "    ],\n",
+    "    remainder=\"drop\"\n",
+    ")\n",
+    "\n",
+    "# Model\n",
+    "iso = IsolationForest(n_estimators=200, contamination=0.1, random_state=42)\n",
+    "\n",
+    "# Pipeline\n",
+    "clf = Pipeline(steps=[\n",
+    "    (\"preprocess\", preprocessor),\n",
+    "    (\"model\", iso)\n",
+    "])\n",
+    "\n",
+    "# Train on NORMAL only (label == 0)\n",
+    "normal_train = train_df[train_df[label_col] == 0]\n",
+    "X_normal = normal_train.drop(columns=drop_cols, errors=\"ignore\")\n",
+    "\n",
+    "clf.fit(X_normal)\n",
+    "print(\" Model trained!\")\n",
+    "\n",
+    "# Predict on test\n",
+    "raw_preds = clf.predict(X_test)            # 1 normal, -1 anomaly\n",
+    "pred_anomaly = np.where(raw_preds == -1, 1, 0)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, pred_anomaly))\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, pred_anomaly))\n",
+    "\n",
+    "# Save model\n",
+    "model_path = r\"C:\\Users\\kbc_k\\comp3000\\models\\unsw_isoforest.pkl\"\n",
+    "joblib.dump(clf, model_path)\n",
+    "\n",
+    "print(\"\\n Model saved successfully at:\")\n",
+    "print(model_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "985cbd02-2ac6-40b0-b232-b8ca835e6251",
    "metadata": {},
    "outputs": [
@@ -119,50 +180,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model trained!\n"
+      "models folder ready!\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import IsolationForest\n",
-    "\n",
-    "# Preprocess: encode categorical + scale numeric\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), categorical_cols),\n",
-    "        (\"num\", StandardScaler(), numeric_cols)\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# Isolation Forest model\n",
-    "iso = IsolationForest(\n",
-    "    n_estimators=200,\n",
-    "    contamination=0.1,  # guess 10% anomalies (you can adjust)\n",
-    "    random_state=42\n",
-    ")\n",
-    "\n",
-    "# Full pipeline: preprocessing + model\n",
-    "clf = Pipeline(steps=[\n",
-    "    (\"preprocess\", preprocessor),\n",
-    "    (\"model\", iso)\n",
-    "])\n",
-    "\n",
-    "# Keep only normal rows (assuming 0 = normal)\n",
-    "normal_df = df[df[label_col] == 0]\n",
-    "\n",
-    "X_normal = normal_df.drop(columns=[label_col])\n",
-    "\n",
-    "# Fit the pipeline\n",
-    "clf.fit(X_normal)\n",
-    "print(\"Model trained!\")\n"
+    "import os\n",
+    "os.makedirs(r\"C:\\Users\\kbc_k\\comp3000\\models\", exist_ok=True)\n",
+    "print(\"models folder ready!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "e8ad37f7-ec43-467f-8e6d-e983ec39dcc7",
    "metadata": {},
    "outputs": [
@@ -170,47 +200,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confusion Matrix:\n",
-      "[[33300  3700]\n",
-      " [23998 21334]]\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.58      0.90      0.71     37000\n",
-      "           1       0.85      0.47      0.61     45332\n",
-      "\n",
-      "    accuracy                           0.66     82332\n",
-      "   macro avg       0.72      0.69      0.66     82332\n",
-      "weighted avg       0.73      0.66      0.65     82332\n",
-      "\n"
+      " Model loaded!\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "import joblib\n",
     "\n",
-    "X_all = df.drop(columns=[label_col])\n",
-    "y_all = df[label_col]  # 0 normal, 1 attack\n",
-    "\n",
-    "# Predict: IsolationForest gives 1 (normal) and -1 (anomaly)\n",
-    "raw_preds = clf.predict(X_all)\n",
-    "\n",
-    "# Convert to 0/1 (same as label)\n",
-    "pred_anomaly = np.where(raw_preds == -1, 1, 0)  # 1 = anomaly/attack\n",
-    "\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(confusion_matrix(y_all, pred_anomaly))\n",
-    "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_all, pred_anomaly))"
+    "model = joblib.load(r\"C:\\Users\\kbc_k\\comp3000\\models\\unsw_isoforest.pkl\")\n",
+    "print(\" Model loaded!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b8efb71b-d09b-4784-bb5e-f945e7cf78f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "834e05c0-93c0-4ce4-a35f-2101fccfcdaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "147cea10-83b6-4418-926c-97f4d96403cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fb7e1f8-815d-4936-9c9a-4f1d101ff835",
    "metadata": {},
    "outputs": [],
    "source": []
